# verified-anonymous-sns

./: .gitignore  Cargo.toml  Config.toml  README.md  rust-setup.sh  rust-toolchain.toml
circuit/: stealthnote_jwt.json  verified_anonymous_sns_jwt.json  zkemail_test.json
circuit/zkjwt_circuit/: Nargo.toml  README.md  build.sh  info.sh
circuit/zkjwt_circuit/src/: main.nr
circuit/zkjwt_circuit/src/zkjwt/: mod.nr  nullifier_generator.nr  utils.nr
contracts/: .env copy.example  Cargo.toml  README.md  compileContracts.sh  forge-install.sh  foundry.toml  remappings.txt
contracts/cache/: solidity-files-cache.json
contracts/src/: lib.rs
contracts/src/circuits/dataType/: DataType.sol
contracts/src/circuits/dataType/converters/: AbiDecoder.sol
contracts/src/circuits/zk-jwt/: ZkJwtProofManager.sol  ZkJwtProofVerifier.sol
contracts/src/circuits/zk-jwt/honk-verifier/: honk_vk.sol
contracts/test/circuits/: mod.rs
contracts/test/circuits/zk-jwt/: mod.rs  proof_generator.rs  test_proof_generation.rs  test_proof_generation.sh  test_zk_jwt_proof_manager.rs  test_zk_jwt_proof_manager.sh  test_zk_jwt_proof_verifier.rs
contracts/test/circuits/zk-jwt/honk-verifier/: test_honk_verifier.rs
contracts/test/circuits/zk_jwt/: proof_generator.rs  test_zk_jwt_proof_manager.rs  test_zk_jwt_proof_verifier.rs  test_zk_jwt_proof_verifier.sh
contracts/test/circuits/zk_jwt/honk_verifier/: test_honk_verifier.rs  test_honk_verifier.sh
contracts/test/examples/: test_storage.rs
contracts/test/examples/test-soldiity-sc-file/: SimpleStorage.sol
flutter/: .gitignore  firebase.json
flutter/android/: .gitignore
flutter/android/app/: build.gradle.kts
flutter/linux/: CMakeLists.txt
flutter/linux/flutter/ephemeral/.plugin_symlinks/: flutter_secure_storage_linux  path_provider_linux  url_launcher_linux
flutter/linux/runner/: my_application.cc
flutter/macos/Flutter/: GeneratedPluginRegistrant.swift
flutter/macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
flutter/macos/Runner.xcodeproj/: project.pbxproj
flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter/macos/Runner/Configs/: AppInfo.xcconfig
flutter/mopro_flutter_plugin/ios/: mopro_flutter.podspec
flutter/web/: index.html  manifest.json
flutter/windows/: CMakeLists.txt
flutter/windows/flutter/ephemeral/.plugin_symlinks/: desktop_webview_window  firebase_auth  firebase_core  flutter_secure_storage_windows  flutter_web_auth_2  path_provider_windows  url_launcher_windows  window_to_front
flutter/windows/runner/: Runner.rc  main.cpp
src/: lib.rs
src/proof/: jwt_proof.rs
src/smart_contracts/: zk_jwt_proof_manager.rs  zk_jwt_proof_verifier.rs
src/smart_contracts/honk_verifier/: honk_verifier.rs
src/smart_contracts/proof_generator/: proof_generator.rs
