[package]
name = "test_zkjwt_contracts"
version = "0.1.0"
edition = "2024"
#edition = "2021"

[lib]
name = "test_zkjwt_contracts"
path = "src/lib.rs"

[[test]]
name = "test_storage"
path = "test/examples/test_storage.rs"

[[test]]
name = "test_honk_verifier"
path = "test/circuits/zk-jwt/honk-verifier/test_honk_verifier.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
eyre = "0.6"

# Now using latest alloy with edition 2024 support
alloy = { version = "1.0", features = ["full"] }

# Separate node bindings dependency
alloy-node-bindings = "1.0"

# For parsing contract artifacts
serde_json = "1.0"

# Note: Alloy requires edition2024 support. 
# To use Alloy, upgrade to Rust nightly or wait for stable edition2024 support
# alloy = { version = "0.3", features = ["full"] }
