[package]
name = "test_zkjwt_contracts"
version = "0.1.0"
edition = "2024"
#edition = "2021"

[lib]
name = "test_zkjwt_contracts"
path = "src/lib.rs"

[[test]]
name = "test_storage"
path = "test/examples/test_storage.rs"

[[test]]
name = "test_proof_generation"
path = "test/circuits/zk-jwt/proof_generator/test_proof_generation.rs"

[[test]]
name = "test_honk_verifier"
path = "test/circuits/zk-jwt/honk_verifier/test_honk_verifier.rs"

[[test]]
name = "test_zk_jwt_proof_verifier"
path = "test/circuits/zk-jwt/test_zk_jwt_proof_verifier.rs"

[[test]]
name = "test_zk_jwt_proof_manager"
path = "test/circuits/zk-jwt/test_zk_jwt_proof_manager.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
eyre = "0.6"

# Now using latest alloy with edition 2024 support
alloy = { version = "1.0", features = ["full"] }

# Separate node bindings dependency
alloy-node-bindings = "1.0"

# For parsing contract artifacts
serde_json = "1.0"

# To access the proof/input generation functions of the parent crate (./src/proof/) directory.
# "mopro-zkemail-nr" is the "package name" of the parent crate, which is defined in the Cargo.toml of the parent crate directory.
mopro-zkemail-nr = { path = "../" }

# Note: Alloy requires edition2024 support. 
# To use Alloy, upgrade to Rust nightly or wait for stable edition2024 support
# alloy = { version = "0.3", features = ["full"] }


#####################################################################################################
# The dependencies in the Cargo.toml of the root directory, which is used in the proof/jwt_proof.rs #
#####################################################################################################

serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
num-bigint = "0.4"
reqwest = { version = "0.12", features = ["json"] }
#tokio = { version = "1", features = ["full"] }
base64 = "0.22"
sha256 = "1.6.0"
sha2 = "0.10"
anyhow = "1.0.98"
bn254_blackbox_solver = { git = "https://github.com/noir-lang/noir.git", tag = "v1.0.0-beta.3", package = "bn254_blackbox_solver" }
acir = { git = "https://github.com/noir-lang/noir.git", tag = "v1.0.0-beta.3", package = "acir" }

# build for Android
noir = { git = "https://github.com/zkmopro/noir-rs", features = [
    "barretenberg",
    "android-compat",
] }
chrono = "0.4.40"
hex = "0.4.3"
byteorder = "1.5.0"